# NeuralNet

./: README.md  main.py  neuralnet.py  pyproject.toml
