[tool.poetry]
name = "neuralnet"
version = "0.1.0"
description = ""
authors = ["Quantum-Codes <87054411+Quantum-Codes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.3"
matplotlib = "^3.10.3"
pyqt6 = "^6.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
